[tool.poetry]
name = "find_my_bike"
version = "0.1.0"
description = ""
authors = ["samsja <sami.jaghouar@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.1"
torchvision = "^0.10.1"
jina = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.2.0"
matplotlib = "^3.4.3"
ipywidgets = "^7.6.3"
jupyterlab-code-formatter = "^1.4.10"
xeus-python = "^0.12.5"
black = "^21.8b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
jupyterlab = "^3.1.12"
pytorch-lightning = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
